--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "prettier-plugin-sort-json": "^4.1.1"
   },
   "dependencies": {
-    "dotenv": "^16.5.0"
+    "dotenv": "^16.5.0",
+    "mongoose": "^8.14.1"
   }
 }
